<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zuco.finalandroid.MainActivity">


    <ImageView
        android:id="@+id/imageViewAbout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"/>


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/first"
            android:text="@string/recipes"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_an_order" />

        <TextView
            android:id="@+id/tvItemSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/page"/>
        <Button
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/timer"/>
        <Button
            android:id="@+id/radiobut"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Ingredientsneeded"/>
        <Button
            android:id="@+id/dialogg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Dialog"/>
        <Button
            android:id="@+id/checkboxx"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Calculator"/>
        <Button
            android:id="@+id/hand_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Handler"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/cake"
            android:scaleType="matrix"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

</RelativeLayout>
